--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <title>Bashbullet - Authenticated</title>
-</head>
-<body>
-  <section class="container">
-    <div class="login">
-      <h1>Bashbullet</h1>
-	<p> Authentication completed, return to bashbullet and enjoy !</p>
-    </div>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=https://github.com/Boteium/bashbullet">
+        <script type="text/javascript">
+            window.location.href = "https://github.com/Boteium/bashbullet"
+        </script>
+        <title>Redirection to Bashbullet homepage</title>
+    </head>
+    <body>
+        If the page doesn't reload automatically, <a href='https://github.com/Boteium/bashbullet'>click here !</a>
+    </body>
 </html>
