--- a/authed.html
+++ b/authed.html
@@ -7,7 +7,12 @@
   <section class="container">
     <div class="login">
       <h1>Bashbullet</h1>
-	<p> Authentication completed, return to bashbullet and enjoy !</p>
+	<p>	One step further ! <br>
+		please copy the strings after hashtag from the url bar and copy it to ~/.bashbullet/config<br>
+		<br>
+		your ~/.bashbullet/config should now contain a line like this :<br><br>
+		access_token=o.abcdefghijklmnopqrstuvwxyz123456<br><br>
+	</p>
     </div>
 </body>
 </html>
